// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Footer Core default renders correctly 1`] = `
<footer
  class="ecl-footer-core"
>
  <div
    class="ecl-container ecl-footer-core__container"
  >
    <div
      class="ecl-footer-core__section ecl-footer-core__section1"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-footer-core__title"
        href="#"
      >
        European Commission website
      </a>
      <div
        class="ecl-footer-core__description"
      >
        This site is managed by the Directorate-General for Communication
      </div>
    </div>
    <div
      class="ecl-footer-core__section ecl-footer-core__section2 ecl-footer-core__section--separator"
    >
      <ul
        class="ecl-footer-core__list ecl-footer-core__list--columns"
      >
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Strategy
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            About the European Commission
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Business, Economy, Euro
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Live, work, travel in the EU
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Law
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Funding, Tenders
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Research and innovation
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Energy, Climate change, Environment
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Education
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Aid, Development cooperation, Fundamental rights
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Food, Farming, Fisheries
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            EU regional and urban development
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Jobs at the European Commission
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Statistics
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            News
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Events
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Publications
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-core__section ecl-footer-core__section3"
    >
      <ul
        class="ecl-footer-core__list"
      >
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Contact the European Commission
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-footer__section-link"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Follow the European Commission on social media
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="static/icons.svg#ui--external"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Resources for partners
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-core__section ecl-footer-core__section4"
    >
      <ul
        class="ecl-footer-core__list"
      >
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Language policy
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Cookies
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Privacy policy
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Legal notice
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Brexit content disclaimer
          </a>
        </li>
      </ul>
    </div>
  </div>
</footer>
`;

exports[`EC - Footer Core default renders correctly with extra attributes 1`] = `
<footer
  class="ecl-footer-core"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-container ecl-footer-core__container"
  >
    <div
      class="ecl-footer-core__section ecl-footer-core__section1"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-footer-core__title"
        href="#"
      >
        European Commission website
      </a>
      <div
        class="ecl-footer-core__description"
      >
        This site is managed by the Directorate-General for Communication
      </div>
    </div>
    <div
      class="ecl-footer-core__section ecl-footer-core__section2 ecl-footer-core__section--separator"
    >
      <ul
        class="ecl-footer-core__list ecl-footer-core__list--columns"
      >
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Strategy
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            About the European Commission
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Business, Economy, Euro
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Live, work, travel in the EU
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Law
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Funding, Tenders
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Research and innovation
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Energy, Climate change, Environment
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Education
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Aid, Development cooperation, Fundamental rights
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Food, Farming, Fisheries
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            EU regional and urban development
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Jobs at the European Commission
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Statistics
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            News
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Events
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Publications
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-core__section ecl-footer-core__section3"
    >
      <ul
        class="ecl-footer-core__list"
      >
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Contact the European Commission
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-footer__section-link"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Follow the European Commission on social media
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="static/icons.svg#ui--external"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Resources for partners
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-core__section ecl-footer-core__section4"
    >
      <ul
        class="ecl-footer-core__list"
      >
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Language policy
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Cookies
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Privacy policy
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Legal notice
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Brexit content disclaimer
          </a>
        </li>
      </ul>
    </div>
  </div>
</footer>
`;

exports[`EC - Footer Core default renders correctly with extra class names 1`] = `
<footer
  class="ecl-footer-core custom-class custom-class--test"
>
  <div
    class="ecl-container ecl-footer-core__container"
  >
    <div
      class="ecl-footer-core__section ecl-footer-core__section1"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-footer-core__title"
        href="#"
      >
        European Commission website
      </a>
      <div
        class="ecl-footer-core__description"
      >
        This site is managed by the Directorate-General for Communication
      </div>
    </div>
    <div
      class="ecl-footer-core__section ecl-footer-core__section2 ecl-footer-core__section--separator"
    >
      <ul
        class="ecl-footer-core__list ecl-footer-core__list--columns"
      >
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Strategy
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            About the European Commission
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Business, Economy, Euro
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Live, work, travel in the EU
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Law
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Funding, Tenders
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Research and innovation
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Energy, Climate change, Environment
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Education
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Aid, Development cooperation, Fundamental rights
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Food, Farming, Fisheries
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            EU regional and urban development
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Jobs at the European Commission
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Statistics
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            News
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Events
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Publications
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-core__section ecl-footer-core__section3"
    >
      <ul
        class="ecl-footer-core__list"
      >
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Contact the European Commission
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-footer__section-link"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Follow the European Commission on social media
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="static/icons.svg#ui--external"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Resources for partners
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-core__section ecl-footer-core__section4"
    >
      <ul
        class="ecl-footer-core__list"
      >
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Language policy
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Cookies
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Privacy policy
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Legal notice
          </a>
        </li>
        <li
          class="ecl-footer-core__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer__section-link"
            href="/example"
          >
            Brexit content disclaimer
          </a>
        </li>
      </ul>
    </div>
  </div>
</footer>
`;
